Button decoration fixed (denk ik)

--- a/style.css
+++ b/style.css
@@ -646,6 +646,7 @@ margin-top: 6px;
 #account-btn{
   margin-left: 0.92rem;
   height: 4vh;
+  text-decoration: none;
 }
 
 @keyframes animatetext {
