--- a/style.css
+++ b/style.css
@@ -408,7 +408,7 @@ span {
 
 .review .box-container .box{
   flex:1 1 30rem;
-  box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
+  box-shadow: 0 .5rem 1.5rem rgba(40, 40, 40, 0.1);
   border-radius: .5rem;
   padding:3rem 2rem;
   position: relative;
