--- a/style.css
+++ b/style.css
@@ -270,6 +270,7 @@ span {
   width: 50%;
   background: #11181A;
   color: #fff;
+  cursor: pointer;
 }
 .cart-btn:hover{
   height: 5rem;
@@ -278,6 +279,7 @@ span {
   width: 50%;
   background: #ffc72c;
   color: #fff;
+  cursor: pointer;
 }
 .icons-container{
   background: #242F35;
