--- a/style.css
+++ b/style.css
@@ -318,7 +318,25 @@ span {
   font-size: 1.3rem;
   text-transform: capitalize;
 }
+.icons{
+  height: 5rem;
+  line-height: 5rem;
+  font-size: 2rem;
+  width:50%;
+  background: #11181A;
+  color: #fff;
+  cursor: pointer;
 
+}
+.icons:hover{
+  height: 5rem;
+  line-height: 5rem;
+  font-size: 2rem;
+  width:50%;
+  background: #FFC72C;
+  color: #fff;
+  cursor: pointer;
+}
 .products .box-container{
   display: flex;
   flex-wrap: wrap;
