--- a/style.css
+++ b/style.css
@@ -263,24 +263,7 @@ span {
   line-height: 1.5;
   animation: animatetext 5s;
 }
-.cart-btn{
-  height: 5rem;
-  line-height: 5rem;
-  font-size: 2.3rem;
-  width: 50%;
-  background: #11181A;
-  color: #fff;
-  cursor: pointer;
-}
-.cart-btn:hover{
-  height: 5rem;
-  line-height: 5rem;
-  font-size: 2.3rem;
-  width: 50%;
-  background: #ffc72c;
-  color: #fff;
-  cursor: pointer;
-}
+
 .icons-container{
   background: #242F35;
   display: flex;
@@ -318,25 +301,7 @@ span {
   font-size: 1.3rem;
   text-transform: capitalize;
 }
-.icons{
-  height: 5rem;
-  line-height: 5rem;
-  font-size: 2rem;
-  width:50%;
-  background: #11181A;
-  color: #fff;
-  cursor: pointer;
 
-}
-.icons:hover{
-  height: 5rem;
-  line-height: 5rem;
-  font-size: 2rem;
-  width:50%;
-  background: #FFC72C;
-  color: #fff;
-  cursor: pointer;
-}
 .products .box-container{
   display: flex;
   flex-wrap: wrap;
@@ -397,20 +362,37 @@ span {
   background: #11181A;
   color: #fff;
 }
-
 .products .box-container .box .image .icons .cart-btn{
   border-left: .1rem solid #fff;
   border-right: .1rem solid #fff;
   width: 81rem;
   text-transform: capitalize;
+  
 }
 
 .products .box-container .box .image .icons a:hover{
   background: #ffc72c;
   width: 81rem;
-  text-transform: capitalize;
+  cursor: pointer;
 }
-
+.products .box-container .box .image .icons a{
+  height: 5rem;
+  line-height: 5rem;
+  font-size: 2rem;
+  width:50%;
+  background: #11181A;
+  color: #fff;
+  cursor: pointer;
+}
+.products .box-container .box .image .icons a:hover{
+  height: 5rem;
+  line-height: 5rem;
+  font-size: 2rem;
+  width:100%;
+  background: #FFC72C;
+  color: #fff;
+  cursor: pointer;
+}
 .products .box-container .box .content{
   padding:2rem;
   text-align: center;
@@ -682,7 +664,6 @@ margin-top: 6px;
 #account-btn{
   margin-left: 0.92rem;
   height: 4vh;
-  text-decoration: none;
 }
 
 @keyframes animatetext {
