--- a/style.css
+++ b/style.css
@@ -369,7 +369,22 @@ span {
   text-transform: capitalize;
   
 }
-
+.products .box-container .box .image .icons a{
+  height: 5rem;
+  line-height: 5rem;
+  font-size: 2rem;
+  width:50%;
+  background: #11181A;
+  color: #fff;
+}
+.products .box-container .box .image .icons a:hover{
+  height: 5rem;
+  line-height: 5rem;
+  font-size: 2rem;
+  width:100%;
+  background: #FFC72C;
+  color: #fff;
+}
 .products .box-container .box .image .icons a:hover{
   background: #ffc72c;
   width: 81rem;
