--- a/cart.css
+++ b/cart.css
@@ -40,7 +40,7 @@
     padding: 5rem 10%;
     background-color: #182024;
   }
-  .bg-light{
+  .body{
     color: white;
     background-color: #182024;
   }
