--- a/cart.css
+++ b/cart.css
@@ -106,7 +106,6 @@
     -ms-flex-align: center;
     align-items: center;
     z-index: 1000;
-    border-bottom: color #171E22 15px;
   }
   
   .headerimage {
@@ -142,6 +141,9 @@
     color: #fff;
     display: none;
   }
+  h2{
+    background-color: #182024;
+  }
   
   .header .navbar #close-navbar:hover {
     -webkit-transform: rotate(90deg);
@@ -153,7 +155,7 @@
     font-size: 1.2rem;
     color: #fff;
     font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   .header .navbar a:hover {
@@ -176,7 +178,6 @@
   }
   .footer {
     background: #212B30;
-    border-top: color #171E22 15px;
   }
   
   .footer .box-container {
