--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ span {
   font-size: 1.2rem;
   color: #fff;
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .header .navbar a:hover {
