--- a/cart.css
+++ b/cart.css
@@ -269,8 +269,14 @@
       opacity: 1;
     }
   }
-  
-  
+  .col-md-7{
+    padding-bottom: 194px;
+    padding-top: 30px;
+  }
+  .row{
+    padding-bottom: 194px;
+    padding-top: 30px;
+  }
   
   
   
