--- a/cart.css
+++ b/cart.css
@@ -266,12 +266,17 @@
     }
   }
   .col-md-7{
-    padding-bottom: 190px;
+    padding-bottom: 300px;
     padding-top: 30px;
   }
   
   
-  
+  @media (max-width: 768px) {
+    .col-md-7{
+      padding: none;
+    }
+    
+  }
   
   /* media queries  */
   
