--- a/cart.css
+++ b/cart.css
@@ -20,7 +20,7 @@
   }
   
   html {
-    font-size: 100%;
+    font-size: 62.5%;
     overflow-x: hidden;
   }
   
@@ -209,7 +209,9 @@
     margin-right: .3rem;
     text-align: center;
   }
-  
+  .container-fluid{
+    font-size: 100%;
+  }
   .footer .box-container .box .share a:hover {
     background-color: #fff;
   }
