--- a/style.css
+++ b/style.css
@@ -672,7 +672,6 @@ margin-top: 6px;
 
 #account-btn{
   margin-left: 0.92rem;
-  height: 4vh;
   text-decoration: none;
   color: white;
 }
@@ -855,8 +854,16 @@ margin-top: 6px;
   .heading {
     font-size: 3rem;
   }
-
+}
   .about .content .about-title {
     font-size: 4rem;
   }
-}
+  @media (max-width: 768px) {
+    #accountbutton{
+      height: 4vh;
+      margin-left: 0.92rem;
+      text-decoration: none;
+      color: white;
+
+    }
+  }
