--- a/cart.css
+++ b/cart.css
@@ -252,6 +252,7 @@
     margin-left: 0.92rem;
     text-decoration: none;
     color:white;
+    height: 2.5vh;
   }
   
   @keyframes animatetext {
@@ -448,7 +449,7 @@
     @media (max-width: 768px) {
       #accountbutton{
         height: 4vh;
-        margin-left: 0.92rem;
+        margin-left: -0.4rem;
         text-decoration: none;
         color: white;
   
